# iam_builder

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  README.md  iam_builder.py  inv.py  inv.yaml  pyproject.toml  setup.py
.circleci/: config.yml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: lint-python.yml  lint-yaml.yml  lint.yml  poetry-pypi-release.yml  pythonpackage.yml  test-mojap-suite.yml  test.yml
examples/: iam_config.json  iam_config.yaml  iam_policy.json  testing.yaml
iam_builder/: command_line.py  exceptions.py  iam_builder.py  iam_schema.py  templates.py  test.yaml
iam_builder/schemas/: iam_schema.json
templates/: iam_base_template.json  iam_lookup.json
tests/: __init__.py  test_iam_builder.py  test_iam_configurations.py
tests/expected_policy/: CADET_deployer.json  all_config.json  athena_full_access.json  athena_read_only.json  athena_two_dumps.json  cadet_deployer.json  cloudtrail_lookup_events.json  cloudwatch_athena_query_executions.json  deny.json  glue_catalog_tables.json  glue_job.json  read_only.json  read_write.json  secrets.json  secrets_readwrite.json  secretsmanager_read_only.json  sub_folder_multi_access.json  write_only.json
tests/test_config/: CADET_deployer.yaml  all_config.yaml  athena_full_access.yaml  athena_read_only.yaml  athena_two_dumps.yaml  bad_CADET_deployer.yaml  bad_athena_config.yaml  bad_cadet_deployer.yaml  bad_glue_catalog_tables.yaml  bad_glue_config.yaml  bad_read_only_not_list.yaml  bad_s3_config.yaml  bad_secrestmanager_write_only.yaml  bad_secretsmanager_read_write.yaml  (+15 more)
(+1 files in other folders)
