[tool.poetry]
name = "iam_builder"
version = "4.5.0"
description = "A lil python package to generate iam policies"
authors = ["Karik Isichei <karik.isichei@digital.justice.gov.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
parameterized = "0.7.*"
jsonschema = "^4.10.0"

[tool.poetry.scripts]
iam_builder = "iam_builder.command_line:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
